# MultiChem

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO
.github/workflows/: check-build.yml
include/Core/: BalanceEquation.hpp  Balancer.hpp  Filesystem.hpp  MoleConversion.hpp  PeriodicTable.hpp  Util.hpp
src/: entry.cpp
src/Core/: BalanceEquation.cpp  Balancer.cpp  Balancer.hpp  Filesystem.cpp  Filesystem.hpp  MoleConversion.cpp  MoleConversion.hpp  PeriodicTable.cpp  PeriodicTable.hpp  Util.cpp  Util.hpp
src/Include/: common.hpp
tests/: example.json
